#pragma once

#include "IUserPort.hpp"
#include "Logger/PrefixedLogger.hpp"
#include "IUeGui.hpp"
#include "UeGui/ITextMode.hpp"
#include "UeGui/ISmsComposeMode.hpp"
#include "UeGui/IListViewMode.hpp"
#include "Messages/PhoneNumber.hpp"
#include "Constants/MenuConstans.h"

namespace ue
{

class UserPort : public IUserPort
{
public:
    UserPort(common::ILogger& logger, IUeGui& gui, common::PhoneNumber phoneNumber);
    void start(IUserEventsHandler& handler);
    void stop();

    void showNotConnected() override;
    void showConnecting() override;
    IUeGui& getUserGui() override;

    void showMainMenu() override;

    void showSMSList(const smsContainer&& smsList) override;
    void showSMSList(const smsContainer& smsList) override;

    void showSMS(ITextMessage& sms) override;
    void showSMS(ITextMessage&& sms) override;

    IUeGui::ISmsComposeMode& initSmsComposer() override;
    IUeGui::IListViewMode& initListViewMode() override;
    IUeGui::ITextMode& initTextMode() override;

    common::PhoneNumber getPhoneNumber() override;

    PhoneNumber getInputPhoneNumber(IUeGui::ISmsComposeMode &composer) override;
    std::string getInputString(IUeGui::ISmsComposeMode &composer) override;

private:
    common::PrefixedLogger logger;
    IUeGui& gui;
    common::PhoneNumber phoneNumber;
    IUserEventsHandler* handler = nullptr;

};

}
